@startuml proposal_04_forward_decl
package gn10_can {
    class CANManager {
        - subscribers_: map<uint32_t, CANDevice*>
        - driver_: drivers.DriverInterface&
        + register_device(device: CANDevice*): void
        + send_frame(frame: CANFrame): bool
        + update(): void
    }

    class CANDevice {
        - manager_: CANManager*
        - my_id_: uint32_t
        + on_receive(frame: CANFrame): void
        + send(frame: CANFrame): void
    }

    namespace drivers {
        interface DriverInterface
    }

    CANManager --> drivers.DriverInterface
    
    CANManager o-- CANDevice : "Pointer"
    CANDevice --> CANManager : "Pointer"

    note "Circular dependency resolved by Forward Declaration.\nHeader files do not include each other." as N1
    CANManager .. N1
    CANDevice .. N1
}
@enduml
